# mof_ble_bridge

./: .gitignore  README.md  mod_cmd_help.txt  pyproject.toml
.github/workflows/: ci.yml  dry_release.yml  release.yml
.scripts/: __init__.py  hardlink_addon_to_blenders.py
mof_ble_bridge/: __init__.py  mof_ble.py
mof_ble_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
