[project]
name = "mof_ble_bridge"
dynamic = ["version"]
description = "Ministry of Flat Bridge — Blender UV unwrap addon bridging Ministry of Flat by Eskil Steenberg (quelsolaar.com)"
authors = [
    {name = "Michal Hons", email = "info@mehpixel.com"},
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff==0.15.7",
    "pydoclint>=0.8.3",
]


[tool.ruff]
target-version = "py311"
line-length = 120
include = ["pyproject.toml",
    "**/*.py",
    "*.py"
    ]
exclude = [
    "_debug/**",
    "_bck/**",
    "*.tmp",
    "__pycache__/**",
    ".venv/**",
    "*.pyi",
]


[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "S1", "S2", "S3", "S5", "BLE", "FBT",
    "B", "A", "C4", "COM", "DTZ", "T10", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "Q", "RSE", "RET", "SLF",
    "SLOT", "SIM", "TID",
    "TC001", "TC004", "TC005", "TC010",
    "INT", "ARG", "FIX", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"
]

ignore = [
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "PLC0415", # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "RET504", # https://docs.astral.sh/ruff/rules/unnecessary-assign/
    "TRY003", #
    "FBT001", # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
    "FBT002", # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
".tests/**/*.py" = [
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "SLF001",  # https://docs.astral.sh/ruff/rules/private-member-access/
    "S101"  # https://docs.astral.sh/ruff/rules/assert/
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["_t*", "t*"]

[tool.bumpversion]
current_version = "0.0.1"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -dev(?P<dev>\\d+)
    )?
"""
serialize = [
    "{major}.{minor}.{patch}-dev{dev}",
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "proxor-v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.part.dev]
optional_value = ""
values = "0123456789"
independent = true


[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
ignore-private-args = true
ignore-underscore-args = true
exclude = "\\.venv"

