[project]
name = "mof_ble_bridge"
dynamic = ["version"]
description = "Ministry of Flat Bridge — Blender UV unwrap addon bridging Ministry of Flat by Eskil Steenberg (quelsolaar.com)"
authors = [
    {name = "Michal Hons", email = "info@mehpixel.com"},
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff==0.15.7",
    "pydoclint>=0.8.3",
]


[tool.ruff]
target-version = "py311"
line-length = 120
include = ["pyproject.toml",
    "**/*.py",
    "*.py"
    ]
exclude = [
    "_debug/**",
    "_bck/**",
    "*.tmp",
    "__pycache__/**",
    ".venv/**",
    "*.pyi",
    "mof_ble_bridge/mof_ble.py",           # Legacy reference script, superseded by __init__.py
    "mof_ble_bridge/should_be_working.py",  # Third-party reference code, not part of this addon
]


[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "S1", "S2", "S3", "S5", "BLE", "FBT",
    "B", "A", "C4", "COM", "DTZ", "T10", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "Q", "RSE", "RET", "SLF",
    "SLOT", "SIM", "TID",
    "TC001", "TC004", "TC005", "TC010",
    "INT", "ARG", "FIX", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"
]

ignore = [
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "PLC0415", # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "RET504", # https://docs.astral.sh/ruff/rules/unnecessary-assign/
    "TRY003", #
    "FBT001", # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
    "FBT002", # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
    "FBT003", # https://docs.astral.sh/ruff/rules/boolean-positional-value-in-call/ — Blender API (select_set etc.)
    "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-attributes-default/ — Blender bl_options convention
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
".tests/**/*.py" = [
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "SLF001",  # https://docs.astral.sh/ruff/rules/private-member-access/
    "S101"  # https://docs.astral.sh/ruff/rules/assert/
]


[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
ignore-private-args = true
ignore-underscore-args = true
exclude = "\\.venv"

